--- a/hukuk/web/static/report.html
+++ b/hukuk/web/static/report.html
@@ -129,11 +129,15 @@
             }
 
             /* Content Container */
-            main>div {
+            #view-report {
                 display: block !important;
                 height: auto !important;
                 overflow: visible !important;
                 padding: 0 !important;
+            }
+
+            #view-history {
+                display: none !important;
             }
 
             /* The PDF Wrapper */
@@ -211,12 +215,14 @@
                     class="material-symbols-outlined text-gray-500 dark:text-gray-400 group-hover:text-primary transition-colors">grid_view</span>
                 <span class="font-medium text-sm">Dashboard</span>
             </a>
-            <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg bg-primary/10 text-primary dark:text-primary font-medium transition-colors"
+            <a id="nav-report" onclick="switchView('report'); return false;"
+                class="flex items-center gap-3 px-3 py-2.5 rounded-lg bg-primary/10 text-primary dark:text-primary font-medium transition-colors cursor-pointer"
                 href="#">
                 <span class="material-symbols-outlined icon-fill">description</span>
                 <span class="text-sm">Rapor Görüntüleyici</span>
             </a>
-            <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-[#111418] dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors group"
+            <a id="nav-history" onclick="switchView('history'); return false;"
+                class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-[#111418] dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors group cursor-pointer"
                 href="#">
                 <span
                     class="material-symbols-outlined text-gray-500 dark:text-gray-400 group-hover:text-primary transition-colors">psychology</span>
@@ -250,9 +256,117 @@
     <!-- REPORT CONTENT WRAPPER -->
     <div class="flex flex-1 overflow-hidden">
 
-        <!-- LEFT PANEL: SELECTED RESULTS LIST -->
+        <!-- MIDDLE PANEL: MULTI-VIEW MAIN CONTENT -->
+        <main class="flex-1 flex flex-col min-w-0 bg-background-light dark:bg-background-dark relative">
+
+            <!-- VIEW: REPORT VIEWER -->
+            <div id="view-report" class="flex flex-col h-full w-full">
+                <header
+                    class="h-16 bg-surface-light dark:bg-surface-dark border-b border-gray-200 dark:border-gray-800 flex items-center justify-between px-6 shadow-sm z-10 shrink-0">
+                    <div class="flex items-center gap-4 min-w-0">
+                        <div
+                            class="h-10 w-10 bg-red-50 dark:bg-red-900/20 rounded-lg flex items-center justify-center text-red-600 dark:text-red-400 shrink-0 border border-red-100 dark:border-red-900/30">
+                            <span class="material-symbols-outlined icon-fill">picture_as_pdf</span>
+                        </div>
+                        <div class="flex flex-col justify-center min-w-0">
+                            <h2 id="pdfTitleHeader"
+                                class="text-[#111418] dark:text-white font-bold text-sm leading-tight truncate max-w-[200px] lg:max-w-[400px]">
+                                Belge Seçiniz</h2>
+                            <p class="text-[#617589] dark:text-gray-400 text-xs mt-0.5 flex items-center gap-1.5">
+                                <span class="w-1.5 h-1.5 rounded-full bg-green-500"></span>
+                                Analiz Tamamlandı
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <div
+                            class="flex items-center bg-gray-100 dark:bg-gray-800 rounded-lg p-1 border border-gray-200 dark:border-gray-700">
+                            <button onclick="zoom(-0.1)"
+                                class="p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
+                                title="Uzaklaştır">
+                                <span class="material-symbols-outlined !text-[20px]">remove</span>
+                            </button>
+                            <span id="zoomLevel"
+                                class="px-3 text-xs font-semibold text-[#111418] dark:text-gray-300 select-none min-w-[3.5rem] text-center font-mono">100%</span>
+                            <button onclick="zoom(0.1)"
+                                class="p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
+                                title="Yakınlaştır">
+                                <span class="material-symbols-outlined !text-[20px]">add</span>
+                            </button>
+                        </div>
+                        <div class="h-8 w-px bg-gray-200 dark:bg-gray-800 mx-2"></div>
+                        <button onclick="window.print()"
+                            class="flex items-center justify-center size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
+                            title="Yazdır">
+                            <span class="material-symbols-outlined !text-[20px]">print</span>
+                        </button>
+                        <button id="downloadBtn"
+                            class="flex items-center justify-center size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
+                            title="İndir">
+                            <span class="material-symbols-outlined !text-[20px]">download</span>
+                        </button>
+
+                    </div>
+                </header>
+                <div
+                    class="flex-1 overflow-y-auto bg-gray-200/50 dark:bg-[#0f151c] p-8 flex justify-center relative pdf-scrollbar">
+
+                    <!-- DOCUMENT CONTAINER -->
+                    <div id="pdfContainer" class="relative w-full max-w-[850px] mb-20 flex flex-col gap-8 hidden">
+                        <!-- AI Context Box -->
+                        <div id="pdfReason"
+                            class="w-full p-6 bg-white border-l-4 border-primary rounded shadow-sm text-slate-700 text-sm leading-relaxed font-medium print:hidden">
+                            <!-- AI Reason injected here -->
+                        </div>
+
+                        <!-- PDF PAGE -->
+                        <div id="viewPage"
+                            class="paper-texture bg-white text-black w-full min-h-[1100px] shadow-page rounded-sm p-[72px] relative group/page transition-transform origin-top duration-200 ease-out">
+                            <div
+                                class="absolute top-8 right-8 text-[10px] text-gray-400 font-mono select-none tracking-wider">
+                                AI LAWYER ANALYSIS REF: #2024-XA</div>
+                            <div id="pdfBody"
+                                class="space-y-6 text-[11pt] leading-[1.8] text-justify font-serif text-gray-900">
+                                <!-- Content injected here -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- EMPTY STATE -->
+                    <div id="emptyState" class="flex flex-col items-center justify-center h-full text-center max-w-md">
+                        <div class="size-20 bg-slate-100 rounded-full flex items-center justify-center mb-4">
+                            <span class="material-symbols-outlined text-4xl">description</span>
+                        </div>
+                        <h3 class="text-lg font-bold text-gray-900">Belge Seçiniz</h3>
+                        <p class="text-sm text-gray-500 mt-2">Detaylı inceleme ve yapay zeka analizini görmek için
+                            soldaki
+                            listeden bir belge seçiniz.</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- VIEW: ANALYSIS HISTORY (Placeholder) -->
+            <div id="view-history" class="hidden h-full w-full flex flex-col">
+                <header
+                    class="h-16 bg-surface-light dark:bg-surface-dark border-b border-gray-200 dark:border-gray-800 flex items-center px-6 shadow-sm shrink-0">
+                    <h2 class="text-[#111418] dark:text-white font-bold text-lg">Analiz Geçmişi</h2>
+                </header>
+                <div class="flex-1 p-10 flex flex-col items-center justify-center text-center">
+                    <div class="bg-primary/5 p-6 rounded-full mb-4">
+                        <span class="material-symbols-outlined text-4xl text-primary">history</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2">Geçmiş Analizler</h3>
+                    <p class="text-gray-500 max-w-sm">Burada daha önce yaptığınız hukuki analizlerin ve raporlamaların
+                        bir listesini göreceksiniz. (Yakında)</p>
+                </div>
+            </div>
+        </main>
+
+        <!-- RIGHT PANEL: SELECTED RESULTS LIST -->
+        <!-- Reduced width by another ~20% -->
         <section
-            class="w-full lg:w-[450px] xl:w-[500px] flex flex-col border-r border-[#f0f2f4] bg-[#fcfdfd] shrink-0 transition-all min-h-0">
+            class="w-full lg:w-[300px] xl:w-[350px] flex flex-col border-l border-[#f0f2f4] bg-[#fcfdfd] shrink-0 transition-all min-h-0">
             <div
                 class="p-4 border-b border-[#f0f2f4] bg-white flex items-center justify-between sticky top-0 z-10 h-16 shrink-0">
                 <div class="flex items-center gap-2">
@@ -277,91 +391,6 @@
             </div>
         </section>
 
-        <!-- RIGHT PANEL: PDF VIEWER -->
-        <main class="flex-1 flex flex-col min-w-0 bg-background-light dark:bg-background-dark relative">
-            <header
-                class="h-16 bg-surface-light dark:bg-surface-dark border-b border-gray-200 dark:border-gray-800 flex items-center justify-between px-6 shadow-sm z-10 shrink-0">
-                <div class="flex items-center gap-4 min-w-0">
-                    <div
-                        class="h-10 w-10 bg-red-50 dark:bg-red-900/20 rounded-lg flex items-center justify-center text-red-600 dark:text-red-400 shrink-0 border border-red-100 dark:border-red-900/30">
-                        <span class="material-symbols-outlined icon-fill">picture_as_pdf</span>
-                    </div>
-                    <div class="flex flex-col justify-center min-w-0">
-                        <h2 id="pdfTitleHeader"
-                            class="text-[#111418] dark:text-white font-bold text-sm leading-tight truncate max-w-[200px] lg:max-w-[400px]">
-                            Belge Seçiniz</h2>
-                        <p class="text-[#617589] dark:text-gray-400 text-xs mt-0.5 flex items-center gap-1.5">
-                            <span class="w-1.5 h-1.5 rounded-full bg-green-500"></span>
-                            Analiz Tamamlandı
-                        </p>
-                    </div>
-                </div>
-                <div class="flex items-center gap-2">
-                    <div
-                        class="flex items-center bg-gray-100 dark:bg-gray-800 rounded-lg p-1 border border-gray-200 dark:border-gray-700">
-                        <button onclick="zoom(-0.1)"
-                            class="p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
-                            title="Uzaklaştır">
-                            <span class="material-symbols-outlined !text-[20px]">remove</span>
-                        </button>
-                        <span id="zoomLevel"
-                            class="px-3 text-xs font-semibold text-[#111418] dark:text-gray-300 select-none min-w-[3.5rem] text-center font-mono">100%</span>
-                        <button onclick="zoom(0.1)"
-                            class="p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
-                            title="Yakınlaştır">
-                            <span class="material-symbols-outlined !text-[20px]">add</span>
-                        </button>
-                    </div>
-                    <div class="h-8 w-px bg-gray-200 dark:bg-gray-800 mx-2"></div>
-                    <button onclick="window.print()"
-                        class="flex items-center justify-center size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
-                        title="Yazdır">
-                        <span class="material-symbols-outlined !text-[20px]">print</span>
-                    </button>
-                    <button id="downloadBtn"
-                        class="flex items-center justify-center size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
-                        title="İndir">
-                        <span class="material-symbols-outlined !text-[20px]">download</span>
-                    </button>
-
-                </div>
-            </header>
-            <div
-                class="flex-1 overflow-y-auto bg-gray-200/50 dark:bg-[#0f151c] p-8 flex justify-center relative pdf-scrollbar">
-
-                <!-- DOCUMENT CONTAINER -->
-                <div id="pdfContainer" class="relative w-full max-w-[850px] mb-20 flex flex-col gap-8 hidden">
-                    <!-- AI Context Box -->
-                    <div id="pdfReason"
-                        class="w-full p-6 bg-white border-l-4 border-primary rounded shadow-sm text-slate-700 text-sm leading-relaxed font-medium print:hidden">
-                        <!-- AI Reason injected here -->
-                    </div>
-
-                    <!-- PDF PAGE -->
-                    <div id="viewPage"
-                        class="paper-texture bg-white text-black w-full min-h-[1100px] shadow-page rounded-sm p-[72px] relative group/page transition-transform origin-top duration-200 ease-out">
-                        <div
-                            class="absolute top-8 right-8 text-[10px] text-gray-400 font-mono select-none tracking-wider">
-                            AI LAWYER ANALYSIS REF: #2024-XA</div>
-                        <div id="pdfBody"
-                            class="space-y-6 text-[11pt] leading-[1.8] text-justify font-serif text-gray-900">
-                            <!-- Content injected here -->
-                        </div>
-                    </div>
-                </div>
-
-                <!-- EMPTY STATE -->
-                <div id="emptyState" class="flex flex-col items-center justify-center h-full text-center max-w-md">
-                    <div class="size-20 bg-slate-100 rounded-full flex items-center justify-center mb-4">
-                        <span class="material-symbols-outlined text-gray-400 text-4xl">description</span>
-                    </div>
-                    <h3 class="text-lg font-bold text-gray-900">Belge Seçiniz</h3>
-                    <p class="text-sm text-gray-500 mt-2">Detaylı inceleme ve yapay zeka analizini görmek için soldaki
-                        listeden bir belge seçiniz.</p>
-                </div>
-
-            </div>
-        </main>
     </div>
 
     <!-- LOGIC -->
@@ -385,6 +414,46 @@
         const viewPage = document.getElementById('viewPage');
         const downloadBtn = document.getElementById('downloadBtn');
 
+        // --- VIEW MANAGEMENT ---
+        const activeNavClasses = ['bg-primary/10', 'text-primary', 'dark:text-primary'];
+        const inactiveNavClasses = ['text-[#111418]', 'dark:text-gray-300', 'hover:bg-gray-100', 'dark:hover:bg-gray-800'];
+
+        function switchView(viewName) {
+            // Views
+            const views = ['report', 'history'];
+            views.forEach(v => {
+                const el = document.getElementById(`view-${v}`);
+                if (el) {
+                    if (v === viewName) el.classList.remove('hidden');
+                    else el.classList.add('hidden');
+                }
+            });
+
+            // Nav Links
+            const navs = ['report', 'history'];
+            navs.forEach(n => {
+                const el = document.getElementById(`nav-${n}`);
+                if (el) {
+                    const icon = el.querySelector('.material-symbols-outlined');
+                    if (n === viewName) {
+                        el.classList.add(...activeNavClasses);
+                        el.classList.remove(...inactiveNavClasses);
+                        if (icon) {
+                            icon.classList.remove('text-gray-500', 'dark:text-gray-400');
+                            icon.classList.add('icon-fill');
+                        }
+                    } else {
+                        el.classList.remove(...activeNavClasses);
+                        el.classList.add(...inactiveNavClasses);
+                        if (icon) {
+                            icon.classList.remove('icon-fill');
+                            icon.classList.add('text-gray-500', 'dark:text-gray-400');
+                        }
+                    }
+                }
+            });
+        }
+
         // --- INIT ---
         window.addEventListener('load', () => {
             try {
@@ -392,7 +461,6 @@
                 if (data) {
                     reportDocs = JSON.parse(data);
                     // Initially select all for the report view context if desired, or none.
-                    // Let's default to selecting all visually
                     reportDocs.forEach((_, i) => selectedIndices.add(i));
                 }
             } catch (e) {
@@ -402,9 +470,12 @@
 
             renderList();
 
+            // Initialize View
+            switchView('report');
+
             // Auto Select First for viewing
             if (reportDocs.length > 0) {
-                activeIdx = 0; // Set active but don't re-render entire list yet, just update view
+                activeIdx = 0;
                 selectDoc(0);
             }
         });
