--- a/hukuk/web/static/modules/history_view.html
+++ b/hukuk/web/static/modules/history_view.html
@@ -2,7 +2,7 @@
     class="h-16 bg-surface-light dark:bg-surface-dark border-b border-gray-200 dark:border-gray-800 flex items-center px-6 shadow-sm shrink-0">
     <h2 class="text-[#111418] dark:text-white font-bold text-lg">Analiz Geçmişi</h2>
 </header>
-<div class="flex-1 overflow-y-auto p-8 bg-gray-50 dark:bg-[#0f151c]">
+<div class="flex-1 overflow-y-auto p-4 sm:p-8 bg-gray-50 dark:bg-[#0f151c]">
     <div class="max-w-4xl mx-auto flex flex-col gap-6">
 
         <!-- HISTORY LIST HEADER -->
