--- a/hukuk/web/static/index.html
+++ b/hukuk/web/static/index.html
@@ -170,6 +170,47 @@
                 linear-gradient(0deg, transparent 0%, rgba(0, 0, 0, 0.02) 1%, transparent 2%);
             background-size: 100% 100%;
         }
+
+        .filter-pill {
+            display: flex;
+            align-items: center;
+            gap: 0.375rem;
+            padding: 0.5rem 1rem;
+            border-radius: 0.75rem;
+            font-size: 11px;
+            font-weight: 700;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            cursor: pointer;
+            border: 1px solid #e2e8f0;
+            user-select: none;
+            white-space: nowrap;
+            background-color: #f8fafc;
+            color: #64748b;
+        }
+
+        .filter-pill-active {
+            background: linear-gradient(to right, #137fec, #2563eb) !important;
+            color: white !important;
+            border-color: transparent !important;
+            box-shadow: 0 10px 15px -3px rgba(19, 127, 236, 0.3), 0 4px 6px -4px rgba(19, 127, 236, 0.3) !important;
+            transform: scale(1.05);
+            z-index: 10;
+        }
+
+        .filter-pill-inactive:hover {
+            border-color: rgba(19, 127, 236, 0.4);
+            color: #137fec;
+            background-color: white;
+            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+        }
+
+        .filter-pill .material-symbols-outlined {
+            font-size: 16px !important;
+        }
+
+        .filter-pill-active .material-symbols-outlined {
+            color: white !important;
+        }
     </style>
 </head>
 
@@ -313,6 +354,25 @@
                                 type="checkbox" onclick="toggleSelectAll()" />
                             <span class="ml-2 text-xs font-medium text-slate-500 select-none">Tümünü Seç</span>
                         </label>
+                    </div>
+
+                    <!-- FILTER BAR (MODERN) -->
+                    <div id="filterBar"
+                        class="px-4 py-3 border-b border-slate-100 bg-slate-50/30 backdrop-blur-sm flex items-center gap-2 overflow-x-auto no-scrollbar shrink-0">
+                        <div onclick="setFilter('all')" id="filter-all" class="filter-pill filter-pill-active">
+                            <span class="material-symbols-outlined">dashboard</span>
+                            <span>Tümü</span>
+                        </div>
+                        <div onclick="setFilter('[EMSAL İLKE]')" id="filter-emsal"
+                            class="filter-pill filter-pill-inactive">
+                            <span class="material-symbols-outlined">gavel</span>
+                            <span>Emsal İlke</span>
+                        </div>
+                        <div onclick="setFilter('[DOĞRUDAN DELİL]')" id="filter-delil"
+                            class="filter-pill filter-pill-inactive">
+                            <span class="material-symbols-outlined">verified</span>
+                            <span>Doğrudan Delil</span>
+                        </div>
                     </div>
 
                     <div id="resultsList" class="flex-1 overflow-y-auto p-4 space-y-3 custom-scrollbar h-full">
@@ -483,6 +543,33 @@
             let searchResults = [];
             let selectedIndices = new Set();
             let currentZoom = 1;
+            let activeFilter = 'all';
+
+            function setFilter(type) {
+                activeFilter = type;
+
+                // Update UI Pills
+                const pills = {
+                    'all': document.getElementById('filter-all'),
+                    '[EMSAL İLKE]': document.getElementById('filter-emsal'),
+                    '[DOĞRUDAN DELİL]': document.getElementById('filter-delil')
+                };
+
+                Object.keys(pills).forEach(key => {
+                    const el = pills[key];
+                    if (!el) return;
+                    if (key === type) {
+                        el.classList.remove('filter-pill-inactive');
+                        el.classList.add('filter-pill-active');
+                    } else {
+                        el.classList.remove('filter-pill-active');
+                        el.classList.add('filter-pill-inactive');
+                    }
+                });
+
+                renderList();
+            }
+            window.setFilter = setFilter;
 
             // --- ELEMENTS ---
             const resultsList = document.getElementById('resultsList');
@@ -543,6 +630,7 @@
                 if (!story || !topic) return alert("Hukuki olay ve odak noktası gereklidir.");
                 setLoading(true);
                 searchResults = [];
+                setFilter('all'); // Reset filter on new search
                 renderList();
 
                 try { await fetch('/api/search', { method: 'POST', body: JSON.stringify({ story, topic, negatives }), headers: { 'Content-Type': 'application/json' } }); }
@@ -561,14 +649,23 @@
 
             function renderList() {
                 resultsList.innerHTML = "";
-                resCountBadge.innerText = searchResults.length;
 
-                if (searchResults.length === 0) {
+                // Filter Results
+                const filtered = activeFilter === 'all'
+                    ? searchResults.map((doc, originalIdx) => ({ ...doc, originalIdx }))
+                    : searchResults
+                        .map((doc, originalIdx) => ({ ...doc, originalIdx }))
+                        .filter(doc => doc.role === activeFilter);
+
+                resCountBadge.innerText = filtered.length;
+
+                if (filtered.length === 0) {
                     resultsList.innerHTML = `<div class="flex flex-col items-center justify-center h-full text-center text-slate-400"><span class="material-symbols-outlined text-4xl mb-2">find_in_page</span><p class="text-sm">Sonuç bulunamadı.</p></div>`;
                     return;
                 }
 
-                searchResults.forEach((doc, idx) => {
+                filtered.forEach((doc) => {
+                    const idx = doc.originalIdx;
                     const isSel = selectedIndices.has(idx);
 
                     // Score styling
@@ -633,8 +730,19 @@
             }
 
             function toggleSelectAll() {
-                if (selectAllCb.checked) searchResults.forEach((_, i) => selectedIndices.add(i));
-                else selectedIndices.clear();
+                // Only affect visible items
+                const filteredIdxs = activeFilter === 'all'
+                    ? searchResults.map((_, i) => i)
+                    : searchResults.reduce((acc, doc, i) => {
+                        if (doc.role === activeFilter) acc.push(i);
+                        return acc;
+                    }, []);
+
+                if (selectAllCb.checked) {
+                    filteredIdxs.forEach(i => selectedIndices.add(i));
+                } else {
+                    filteredIdxs.forEach(i => selectedIndices.delete(i));
+                }
                 renderList();
                 updateStatsUI();
             }
