--- a/hukuk/web/static/modules/report_view.html
+++ b/hukuk/web/static/modules/report_view.html
@@ -1,51 +1,51 @@
 <header
     class="h-16 bg-surface-light dark:bg-surface-dark border-b border-gray-200 dark:border-gray-800 flex items-center justify-between px-6 shadow-sm z-10 shrink-0">
-    <div class="flex items-center gap-4 min-w-0">
+    <div class="flex items-center gap-3 min-w-0">
         <div
-            class="h-10 w-10 bg-red-50 dark:bg-red-900/20 rounded-lg flex items-center justify-center text-red-600 dark:text-red-400 shrink-0 border border-red-100 dark:border-red-900/30">
-            <span class="material-symbols-outlined icon-fill">picture_as_pdf</span>
+            class="h-9 w-9 bg-red-50 dark:bg-red-900/20 rounded-lg flex items-center justify-center text-red-600 dark:text-red-400 shrink-0 border border-red-100 dark:border-red-900/30">
+            <span class="material-symbols-outlined !text-[20px] icon-fill">picture_as_pdf</span>
         </div>
         <div class="flex flex-col justify-center min-w-0">
             <h2 id="pdfTitleHeader"
-                class="text-[#111418] dark:text-white font-bold text-sm leading-tight truncate max-w-[200px] lg:max-w-[400px]">
+                class="text-[#111418] dark:text-white font-bold text-xs lg:text-sm leading-tight truncate max-w-[120px] sm:max-w-none">
                 Belge Seçiniz</h2>
-            <p class="text-[#617589] dark:text-gray-400 text-xs mt-0.5 flex items-center gap-1.5">
+            <p class="text-[#617589] dark:text-gray-400 text-[10px] mt-0.5 flex items-center gap-1">
                 <span class="w-1.5 h-1.5 rounded-full bg-green-500"></span>
-                Analiz Tamamlandı
+                Analiz Tamam
             </p>
         </div>
     </div>
-    <div class="flex items-center gap-2">
+    <div class="flex items-center gap-1 sm:gap-2">
         <div
-            class="flex items-center bg-gray-100 dark:bg-gray-800 rounded-lg p-1 border border-gray-200 dark:border-gray-700">
+            class="flex items-center bg-gray-100 dark:bg-gray-800 rounded-lg p-0.5 sm:p-1 border border-gray-200 dark:border-gray-700">
             <button onclick="zoom(-0.1)"
-                class="p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
+                class="p-1 sm:p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
                 title="Uzaklaştır">
-                <span class="material-symbols-outlined !text-[20px]">remove</span>
+                <span class="material-symbols-outlined !text-[18px]">remove</span>
             </button>
             <span id="zoomLevel"
-                class="px-3 text-xs font-semibold text-[#111418] dark:text-gray-300 select-none min-w-[3.5rem] text-center font-mono">100%</span>
+                class="px-1 sm:px-3 text-[10px] sm:text-xs font-semibold text-[#111418] dark:text-gray-300 select-none min-w-[2.5rem] sm:min-w-[3.5rem] text-center font-mono">100%</span>
             <button onclick="zoom(0.1)"
-                class="p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
+                class="p-1 sm:p-1.5 text-[#617589] dark:text-gray-400 hover:text-[#111418] dark:hover:text-white hover:bg-white dark:hover:bg-gray-700 rounded transition-all"
                 title="Yakınlaştır">
-                <span class="material-symbols-outlined !text-[20px]">add</span>
+                <span class="material-symbols-outlined !text-[18px]">add</span>
             </button>
         </div>
-        <div class="h-8 w-px bg-gray-200 dark:bg-gray-800 mx-2"></div>
+        <div class="h-6 w-px bg-gray-200 dark:bg-gray-800 mx-1 sm:mx-2"></div>
         <button onclick="window.print()"
-            class="flex items-center justify-center size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
+            class="flex items-center justify-center size-8 sm:size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
             title="Yazdır">
-            <span class="material-symbols-outlined !text-[20px]">print</span>
+            <span class="material-symbols-outlined !text-[18px]">print</span>
         </button>
         <button id="downloadBtn"
-            class="flex items-center justify-center size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
+            class="flex items-center justify-center size-8 sm:size-9 text-[#617589] dark:text-gray-400 hover:text-primary dark:hover:text-primary hover:bg-primary/5 dark:hover:bg-primary/10 rounded-lg transition-colors border border-transparent hover:border-primary/20"
             title="İndir">
-            <span class="material-symbols-outlined !text-[20px]">download</span>
+            <span class="material-symbols-outlined !text-[18px]">download</span>
         </button>
-
     </div>
 </header>
-<div class="flex-1 overflow-y-auto bg-gray-200/50 dark:bg-[#0f151c] p-8 flex justify-center relative pdf-scrollbar">
+<div
+    class="flex-1 overflow-y-auto bg-gray-200/50 dark:bg-[#0f151c] p-4 lg:p-8 flex justify-center relative pdf-scrollbar">
 
     <!-- DOCUMENT CONTAINER -->
     <div id="pdfContainer" class="relative w-full max-w-[850px] mb-20 flex flex-col gap-8 hidden">
@@ -57,7 +57,7 @@
 
         <!-- PDF PAGE -->
         <div id="viewPage"
-            class="paper-texture bg-white text-black w-full min-h-[1100px] shadow-page rounded-sm p-[72px] relative group/page transition-transform origin-top duration-200 ease-out">
+            class="paper-texture bg-white text-black w-full min-h-[1100px] shadow-page rounded-sm p-8 sm:p-12 lg:p-[72px] relative group/page transition-transform origin-top duration-200 ease-out">
             <div class="absolute top-8 right-8 text-[10px] text-gray-400 font-mono select-none tracking-wider">
                 AI LAWYER ANALYSIS REF: #2024-XA</div>
             <div id="pdfBody" class="space-y-6 text-[11pt] leading-[1.8] text-justify font-serif text-gray-900">
